--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "concurrently": "concurrently \"PORT=3001 npm start\" \"cd client && npm start\""
   },
   "dependencies": {
     "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
+    "concurrently": "^3.6.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0"
   }
 }
