--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
+    "compression": "^1.7.3",
     "concurrently": "^3.6.1",
+    "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "~1.4.3",
     "create-store": "0.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "react-redux": "^5.0.7",
@@ -26,6 +30,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "socket.io": "^2.1.1"
   }
 }
