--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "react-redux": "^5.0.7",
