--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mapbox-gl": "^0.47.0",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
