--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "twilio": "^3.19.1"
   }
 }
