--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "google-calendar": "^1.3.2",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mapbox-gl": "^0.47.0",
