--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon ./server/app.js",
     "seed": "node seed.js",
     "concurrently": "concurrently \"npm start\" \"cd client && npm start\"",
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\""
+    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\""
   },
   "dependencies": {
     "@google/maps": "^0.5.5",
