--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "concurrently": "^3.6.1",
     "connect-session-sequelize": "^5.2.2",
     "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
     "create-store": "0.0.1",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
@@ -42,6 +41,7 @@
     "socket.io": "^2.1.1",
     "twilio": "^3.19.1"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
