--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1"
   },
+  "proxy":"http://localhost:3001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
